--- a/06 - Type Ahead/style.css
+++ b/06 - Type Ahead/style.css
@@ -69,6 +69,12 @@ span.population {
   font-size: 15px;
 }
 
+span.highlight {
+  background-color: #ffc600;
+}
+
 .hl {
   background: #ffc600;
 }
+
+
